- Added the ability for custom hint notifications to use the color names feature
- Added interaction complete animation to name labels
- Added the option to disable the exp bar on the stats screen when you are at max level
- Scoreboard panels will now show the equipped armor of bots if they have them via other mods
- Made hint notifications color bot names as well
- Updated the heist intro screen and added options for it
- Updated the teammate carry text to support cyrillic characters
- Fixed scoreboard panels getting reset when their owner is released from custody
- Fixed a crash related to teammates using custom perk-decks
- Fixed damage reduction bars sometimes not being updated correctly
- Fixed names on hint notifications not being colored if the player has a bracket in their name
- Fixed the ability bar not showing the current amount when using the Tag Team perk-deck
- Fixed the interaction complete animation not being scaled correctly
- Fixed the interaction bar length issue when interacting with bugged objects in The Golden Grin Casino
- Fixed crash related to the secured loot panel and the BeardLib-Editor
- Fixed the throwable indicator sometimes showing wrong values for ability perk-decks
- Fixed a crash related to jokers
- Fixed a crash related to the scoreboard and players skill build
- Fixed a log file error

Version 1.1.1 (2017.11.03)
- Removed the option to show completed trophies/side-jobs since they've been implemented in the vanilla game
- Added challenge notifications panel
- Added tracked achievements to the stats screen (can be set to jump key, crouch key or right click)
- Added support for the Stoic perk deck
- Added time added and removed animations for the Cursed Kill Room heist
- Changed the vanilla value for maximum number of tracked achievements from 4 to 7
- Fixed Downs not updating on scoreboard, and crashing when downs are restored if the player panels are disabled
- Fixed pager count not updating when the player panels are disabled