@@ -43,7 +43,7 @@ VoidUI.hook_files = {
 	["lib/units/player_team/teamaiinventory"] = {"HudManager.lua"},
 	["lib/managers/achievmentmanager"] = {"HudManager.lua"},
 	["lib/managers/playermanager"] = {"HudManager.lua"},
-	["lib/network/base/basenetworksession"] = {"LevelLoadingScreen.lua"},
+	["lib/network/base/basenetworksession"] = {"HudManager.lua"},
 	["lib/network/base/clientnetworksession"] = {"LevelLoadingScreen.lua"},
 	["lib/network/base/hostnetworksession"] = {"LevelLoadingScreen.lua"},
 	["lib/setups/setup"] = {"LevelLoadingScreen.lua"}
