@@ -137,10 +137,11 @@ if VoidUI.options.enable_blackscreen then
 			end
 			
 			local level_data = managers.job:current_level_data()
+			local job_data = managers.job:current_job_data()
 			if level_data then
 				local level_text = job_panel:text({
 					name = "level_text",
-					text = VoidUI.options.blackscreen_map and managers.localization:to_upper_text(level_data.name_id) or "",
+					text = VoidUI.options.blackscreen_map and managers.localization:to_upper_text(level_data.name_id == "heist_branchbank_hl" and job_data.name_id or level_data.name_id) or "",
 					font = tweak_data.menu.pd2_large_font,
 					font_size = 50,
 					align = "center",
@@ -208,10 +209,11 @@ if VoidUI.options.enable_blackscreen then
 			loading_text:set_center_x(job_panel:w() / 2)
 			
 			local level_data = managers.job:current_level_data()
+			local job_data = managers.job:current_job_data()
 			if level_data then
 				local level_text = job_panel:text({
 					name = "level_text",
-					text = VoidUI.options.blackscreen_map and managers.localization:to_upper_text(level_data.name_id) or "",
+					text = VoidUI.options.blackscreen_map and managers.localization:to_upper_text(level_data.name_id == "heist_branchbank_hl" and job_data.name_id or level_data.name_id) or "",
 					font = tweak_data.menu.pd2_large_font,
 					font_size = 50,
 					align = "center",
