@@ -1104,6 +1104,9 @@ if VoidUI.options.enable_stats then
 			if has_stage_data then
 				local job_chain = managers.job:current_job_chain_data()
 				local day = managers.job:current_stage()
+				if day and managers.job:current_job_data().name_id == "heist_rvd" then
+					day = 3 - day
+				end
 				local days = job_chain and #job_chain or 0
 				local is_whisper_mode = managers.groupai and managers.groupai:state():whisper_mode()
 				days_title:set_text(utf8.to_upper(managers.localization:text("hud_days_title", {DAY = day, DAYS = days})))
@@ -1117,8 +1120,8 @@ if VoidUI.options.enable_stats then
 				if level_data then
 					local day_title = top_panel:child("day_title")
 					local day_title_shadow = top_panel:child("day_title_shadow")
-					day_title:set_text(managers.localization:text(level_data.name_id))
-					day_title_shadow:set_text(managers.localization:text(level_data.name_id))
+					day_title:set_text(managers.localization:text(level_data.name_id == "heist_branchbank_hl" and job_data.name_id or level_data.name_id))
+					day_title_shadow:set_text(day_title:text())
 				end
 			end
 			if managers.crime_spree:is_active() then
@@ -1562,7 +1565,7 @@ if VoidUI.options.enable_stats then
 						skills_text:set_color(skillpoints > 120 and Color.red or Color.white)
 						perk_count:set_text(outfit.skills.specializations[2] .. "/9")
 						local icon, rect = tweak_data.hud_icons:get_texture("pd2_question")
-						if outfit.skills.specializations[1] then
+						if tweak_data.skilltree.specializations[tonumber(outfit.skills.specializations[1])] then
 							icon, rect = tweak_data.skilltree:get_specialization_icon_data(tonumber(outfit.skills.specializations[1]))							
 						end
 						perk_icon:set_image(icon, unpack(rect))	
